Add satic linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(GovnoChat)
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(Lib)
-
+set(Boost_USE_STATIC_LIBS   ON)
 
 IF (WIN32)
     set(BOOST_ROOT "C:/boost-build")
@@ -22,7 +22,8 @@ find_package(Boost REQUIRED)
 
 add_executable(server Server/server.cpp)
 #add_executable(client Client/client.cpp)
-
+set(CMAKE_EXE_LINKER_FLAGS " -static")
+target_link_libraries(server -static-libgcc -static-libstdc++)
 if(Boost_FOUND)
     target_include_directories(server PUBLIC ${Boost_INCLUDE_DIR})
     target_link_libraries(server ${Boost_LIBRARIES})
