fix: Fix dev container name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "image": "govno-chat-build",
+    "image": "ghcr.io/dmirtydmirty/boost1-86-0",
 
     "customizations": {
         "vscode": {
