--- a/.github/workflows/auto-check.yml
+++ b/.github/workflows/auto-check.yml
@@ -1,1 +1,17 @@
+name: срусл
+
+on: push
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    container: ghcr.io/dmirtydmirty/boost1-86-0:latest 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Build with CMake
+        run: |
+          mkdir build && cd build
+          cmake ..
+          cmake --build .
 
