feat: Add forwarding port to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,11 @@
                             "ms-vscode.cmake-tools",
                             "twxs.cmake"]
         }
-    }
+    },
 
+    "forwardPorts": [
+    15001
+    ]
     
   }
   
