Update Dockerfile -Add gdb installation to docker image

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM gcc:14.2.0-bookworm
-RUN apt update && apt install -y curl g++ cmake ninja-build
+RUN apt update && apt install -y curl g++ cmake ninja-build gdb
 WORKDIR /tmp
 RUN curl https://archives.boost.io/release/1.86.0/source/boost_1_86_0.tar.gz --output boost.tar.gz \
         && tar xzf boost.tar.gz \
