--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -16,6 +16,8 @@ jobs:
   
     steps:
     - uses: actions/checkout@v3
+      with:
+        path: ${{ github.workspace }}
   
     - name: Configure CMake
       run: |
