--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -68,8 +68,10 @@ jobs:
           password: ${{ secrets.TOKEN }}
 
     - name: build-container
-      run: docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} -f ${{ github.workspace }}/art/Dockerfile_release
-         --build-arg BINARY_PATH=${{ github.workspace }}/art/build/ChatServer  ${{ github.workspace }}
+      run: |
+           ls ${{ github.workspace }}
+           docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} -f ${{ github.workspace }}/art/Dockerfile_release
+           --build-arg BINARY_PATH=${{ github.workspace }}/art/build/ChatServer  ${{ github.workspace }}
 
     - name: Push container
       run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
