--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -70,8 +70,8 @@ jobs:
     - name: build-container
       run: |
            ls ${{ github.workspace }}
-           docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} -f ${{ github.workspace }}/art/Dockerfile_release
-           --build-arg BINARY_PATH=${{ github.workspace }}/art/build/ChatServer  ${{ github.workspace }}
+           docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} -f ${{ github.workspace }}/Dockerfile_release
+           --build-arg BINARY_PATH=${{ github.workspace }}/ChatServer  ${{ github.workspace }}
 
     - name: Push container
       run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
