--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -71,6 +71,7 @@ jobs:
       run: |
            ls ${{ github.workspace }}
            cd ${{ github.workspace }}
+           chmod +x ChatServer
            docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} -f Dockerfile_release --build-arg BINARY_PATH=ChatServer  .
 
     - name: Push container
