--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -111,10 +111,13 @@ jobs:
             cp stop.*   release-${{ github.ref_name }}
             cp log.*    release-${{ github.ref_name }}
 
+
+            echo "ls release-${{ github.ref_name }}"
             ls release-${{ github.ref_name }}
 
             zip release-${{ github.ref_name }}.zip release-${{ github.ref_name }}
 
+            echo "ls"
             ls
 
 
