--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -72,7 +72,7 @@ jobs:
            cd ${{ github.workspace }}
            chmod +x ChatServer
            docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} -f Dockerfile_release --build-arg BINARY_PATH=ChatServer  .
-           docker tag {{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} {{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+           docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
     - name: Push container
       run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
