--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -75,7 +75,9 @@ jobs:
            docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
     - name: Push container
-      run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+      run: |
+            docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+            docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
 
   create-release:
