--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -109,7 +109,7 @@ jobs:
             cp stop.*   release-${{ github.ref_name }}
             cp log.*    release-${{ github.ref_name }}
 
-            zip -r release-${{ github.ref_name }}.zip release-${{ github.ref_name }}
+            zip -r GovnoChatServer-${{ github.ref_name }}.zip release-${{ github.ref_name }}
 
 
 
@@ -131,6 +131,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: release-${{ github.ref_name }}.zip
-        asset_name: release-${{ github.ref_name }}.zip
+        asset_path: GovnoChatServer-${{ github.ref_name }}.zip
+        asset_name: GovnoChatServer-${{ github.ref_name }}.zip
         asset_content_type: application/zip
