--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,9 @@
         "vscode": {
             "extensions": [ "ms-vscode.cpptools-extension-pack",
                             "ms-vscode.cmake-tools",
-                            "twxs.cmake"]
+                            "twxs.cmake",
+                            "akhail.save-typing",
+                        ]
         }
     },
 
