--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -7,20 +7,15 @@ set(Boost_USE_STATIC_LIBS   ON)
 
 find_package(Boost REQUIRED)
 
-set(SOURCES Source/TCPServer.cpp
+set(SOURCES Source/Server.cpp
             Source/Session.cpp
             )
 
-add_library(tcp_server ${SOURCES})
-
-set(CMAKE_EXE_LINKER_FLAGS " -static")
-
-target_link_libraries(tcp_server -static-libgcc -static-libstdc++)
-target_link_directories(tcp_server PUBLIC Include)
+add_library(server ${SOURCES})
 
 if(Boost_FOUND)
-    target_include_directories(tcp_server PUBLIC ${Boost_INCLUDE_DIR})
-    target_link_libraries(tcp_server ${Boost_LIBRARIES})
+    target_include_directories(server PUBLIC ${Boost_INCLUDE_DIR})
+    target_link_libraries(server ${Boost_LIBRARIES})
     message(STATUS "Found BOOST ${Boost_VERSION_STRING}")
 else()
     message(STATUS "WEBSOCKET BOOST Not Found")
