--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(Boost REQUIRED)
 
 set(SOURCES Source/Server.cpp
             Source/Session.cpp
+            Source/Acceptor.cpp
             )
 
 add_library(server ${SOURCES})
