--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(GovnoChatServer)
 set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(Server)
+add_subdirectory(Protocol)
 
 add_executable(ChatServer main.cpp)
 target_link_directories(ChatServer PRIVATE
@@ -11,4 +12,5 @@ target_link_directories(ChatServer PRIVATE
                             )
 target_link_libraries(ChatServer PRIVATE
                             server
+                            protocol
                             )
