Full update protocol, preparing to release

--- a/Protocol/CMakeLists.txt
+++ b/Protocol/CMakeLists.txt
@@ -7,7 +7,7 @@ set(Boost_USE_STATIC_LIBS   ON)
 
 find_package(Boost REQUIRED)
 
-set(SOURCES Source/Protocol.cpp
+set(SOURCES 
             Source/Packet.cpp
             )
 
